--- a/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoBanco/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/CatalogoBanco/Consultar.cshtml
@@ -15,6 +15,9 @@
     @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
     @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
     @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
 
     if (@ViewBag.mensaje != null)
     {
