--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Compras.com_comprador_Info
 @{
     ViewBag.Title = "Consulta de compradores";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_comprador")
+    @Html.Action("GridViewPartial_comprador", new { Nuevo = ViewBag.Nuevo })
 
 }
