--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Consultar.cshtml
@@ -1,33 +1,11 @@
 ﻿@model Core.Erp.Info.Compras.com_ordencompra_local_Info
 @{
-    ViewBag.Title = "Modificar orden de servicio";
+    ViewBag.Title = "Consultar orden de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
-
-    if (ViewBag.mensaje != null)
-    {
-        <div class="alert alert-warning alert-dismissible">
-            <h4>
-                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
-            </h4>
-        </div>
-    }
-
-    if (ViewBag.MensajeSuccess != null)
-    {
-        <div class="row">
-            <div class="col-md-12">
-                <div class="alert alert-success alert-dismissible">
-                    <h4>
-                        <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
-                    </h4>
-                </div>
-            </div>
-        </div>
-    }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 <script type="text/javascript">
@@ -50,7 +28,7 @@
         }
     }
 </script>
-@using (Html.BeginForm("Modificar", "OrdenServicio", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Consultar", "OrdenCompraLocal", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
 
     @Html.HiddenFor(q => q.IdEmpresa)
@@ -61,23 +39,82 @@
     @Html.HiddenFor(q => q.IdComprador)
     @Html.HiddenFor(q => q.Tipo)
     @Html.HiddenFor(q => q.SecuenciaTipo)
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+
+    if (@ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
+    if (ViewBag.MensajeSuccess != null)
+    {
+        <div class="alert alert-success alert-dismissible">
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+            <h4>
+                <i class="icon fa fa-check"></i> @ViewBag.MensajeSuccess
+            </h4>
+        </div>
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-offset-8 col-md-1">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","OrdenCompraLocal",new { Area = "Compras", IdEmpresa = Model.IdEmpresa },null)">
+                            <i class="fa fa-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "OrdenCompraLocal", new { Area = "Compras", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdOrdenCompra=Model.IdOrdenCompra }, null)">
+                            <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "OrdenCompraLocal", new { Area = "Compras", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdOrdenCompra=Model.IdOrdenCompra }, null)">
+                            <i class="fa fa-remove"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="oc_observacion">#OP</label>
-                    @Html.TextBoxFor(q => q.oc_codigo, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.oc_codigo, "", new { @class = "text-danger" })
-                </div>
-            </div>
             <div class="col-md-4">
                 <div class="form-group">
                     <label for="IdSucursal">Sucursal*</label>
-                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control" ,@disabled="disabled"})
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @disabled = "disabled" })
                     @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdEstadoAprobacion_cat">Estado de aprobación*</label>
+                    @Html.DropDownListFor(q => q.IdEstadoAprobacion_cat, new SelectList(ViewBag.lst_apro, "IdCatalogocompra", "Nombre"), new { @class = "form-control", @id = "IdEstadoAprobacion_cat", @disabled = "disabled" })
+                    @Html.ValidationMessageFor(q => q.IdEstadoAprobacion_cat, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdEstado_cierre">Estado de cierre*</label>
@@ -93,15 +130,15 @@
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.DevExpress().DateEditFor(q => q.oc_fecha, settings =>
-                   {
-                       settings.Name = "oc_fecha";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.AllowMouseWheel = false;
-                   }).GetHtml()
+                        {
+                            settings.Name = "oc_fecha";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            settings.Properties.AllowMouseWheel = false;
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.oc_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -114,15 +151,15 @@
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.DevExpress().DateEditFor(q => q.oc_fechaVencimiento, settings =>
-                   {
-                       settings.Name = "oc_fechaVencimiento";
-                       settings.Properties.UseMaskBehavior = true;
-                       settings.Properties.EditFormat = EditFormat.Date;
-                       settings.Properties.EditFormatString = "dd/MM/yyyy";
-                       settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.AllowMouseWheel = false;
-                   }).GetHtml()
+                        {
+                            settings.Name = "oc_fechaVencimiento";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                            settings.Properties.AllowMouseWheel = false;
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.oc_fechaVencimiento, "", new { @class = "text-danger" })
                     </div>
                 </div>
@@ -132,10 +169,10 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <div class="form-group">
                     <label for="IdProveedor">Proveedor*</label>
-                    @Html.Partial("_CmbProveedor_OS", Model.IdProveedor)
+                    @Html.Partial("_CmbProveedor_COM", Model.IdProveedor)
                     @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -147,7 +184,15 @@
                     </button>
                 </div>
             </div>
-            <div class="col-md-3">
+
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="IdDepartamento">Departamento</label>
+                    @Html.DropDownListFor(q => q.IdDepartamento, new SelectList(ViewBag.lst_dep, "IdDepartamento", "nom_departamento"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdTerminoPago">Termino pago*</label>
                     @Html.DropDownListFor(q => q.IdTerminoPago, new SelectList(ViewBag.lst_termino, "IdTerminoPago", "Descripcion"), new { @class = "form-control" })
@@ -163,24 +208,6 @@
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <label for="IdDepartamento">Departamento</label>
-                    @Html.DropDownListFor(q => q.IdDepartamento, new SelectList(ViewBag.lst_dep, "IdDepartamento", "nom_departamento"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdDepartamento, "", new { @class = "text-danger" })
-                </div>
-            </div>
-            <div class="col-md-offset-7 col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
-                    <i class="fa fa-print"></i>
-                </button>
-            </div>
-        </div>
-    </div>
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -196,21 +223,38 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    @Html.Action("GridViewPartial_orden_servicio_det")
+                    @Html.Action("GridViewPartial_ordencompralocal_det")
                 </div>
             </div>
         </div>
     </div>
 
     <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index","OrdenServicio", new { Area = "Compras"  },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","OrdenCompraLocal", new { Area = "Compras"  },null)">Cancelar</a>
     </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
 <script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
 
     function GetInfoProducto(s, e) {
         $("#Secuencia").text(0);
@@ -222,16 +266,16 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("GetInfoProducto", "OrdenServicio",new { Area = "Compras"})',
+            url: '@Url.Action("GetInfoProducto", "OrdenCompraLocal",new { Area = "Compras"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_orden_servicio_det.GetEditor('do_precioCompra').SetValue(data.precio);
-                GridViewPartial_orden_servicio_det.GetEditor('IdCod_Impuesto').SetValue(data.info_producto.IdCod_Impuesto_Iva);
-                GridViewPartial_orden_servicio_det.GetEditor('IdUnidadMedida').SetValue(data.info_producto.IdUnidadMedida);
+                GridView_ordencompralocal_det.GetEditor('do_precioCompra').SetValue(data.precio);
+                GridView_ordencompralocal_det.GetEditor('IdUnidadMedida').SetValue(data.info_producto.IdUnidadMedida);
+                GridView_ordencompralocal_det.GetEditor('IdCod_Impuesto').SetValue(data.info_producto.IdCod_Impuesto_Iva);
             },
             error: function (error) {
             }
@@ -247,7 +291,7 @@
             $.ajax({
                 type: 'POST',
                 data: JSON.stringify(datos),
-                url: '@Url.Action("get_info_termino_pago_x_proveedor", "OrdenServicio", new { Area = "Compras" })',
+                url: '@Url.Action("get_info_termino_pago_x_proveedor", "OrdenCompraLocal", new { Area = "Compras" })',
                 async: false,
                 bDeferRender: true,
                 bProcessing: true,
