--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Consultar.cshtml
@@ -201,38 +201,38 @@ function GetValor()
     @Html.HiddenFor(q => q.IdArchivo)
     @Html.HiddenFor(q => q.SecuencialInicial)
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
 
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-offset-7 col-md-1">
-                @if (@ViewBag.Nuevo == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Modificar == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo = Model.IdArchivo }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Anular == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "ArchivoBancario", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdArchivo = Model.IdArchivo }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
                 <div class="form-group">
@@ -431,7 +431,12 @@ function GetValor()
 
 
 <script>
-        $("#IdBanco").change(function () {
+    $(function () {
+        MostrarBotonesAccion();
+    });
+
+
+    $("#IdBanco").change(function () {
         cargar_procesos();
     });
     $("#IdSucursal").change(function () {
@@ -439,6 +444,20 @@ function GetValor()
         cargar_procesos();
     });
 
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
         function GetListBancoPorSucursal() {
         $("#IdBanco").empty();
         var datos = {
