--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Consultar.cshtml
@@ -15,6 +15,9 @@
     @Html.HiddenFor(q => q.IdBanco)
     @Html.HiddenFor(q => q.IdBanco_Financiero)
     @Html.HiddenFor(q => q.IdTransaccionSession)
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
 
     if (ViewBag.MensajeSuccess != null)
     {
@@ -28,34 +31,31 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-offset-9 col-md-1">
-                @if (@ViewBag.Nuevo == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "BancoCuenta", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Modificar == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "BancoCuenta", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdBanco = Model.IdBanco }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Anular == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "BancoCuenta", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdBanco = Model.IdBanco }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
         </div>
     </div>
@@ -193,3 +193,24 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
+<script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+</script>
