--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoCompras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Compras.com_catalogo_Info
 @{
     ViewBag.Title = "Consulta de catálogos de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,8 +10,10 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.IdCatalogocompra_tipo, new { @id = "IdCatalogocompra_tipo" })
 
-    @Html.Action("GridViewPartial_cat_compras")
+    @Html.Action("GridViewPartial_cat_compras", new { IdCatalogocompra_tipo= Model.IdCatalogocompra_tipo, Nuevo =ViewBag.Nuevo})
 
 
     <div class="box-footer">
