--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoTipoCompras/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoTipoCompras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Compras.com_catalogo_tipo_Info
 @{
     ViewBag.Title = "Consulta de tipos de catálogo de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-
-    @Html.Action("GridViewPartial_catipocompras")
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" }) 
+    @Html.Action("GridViewPartial_catipocompras", new { Nuevo = ViewBag.Nuevo })
 
 }
