--- a/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoTipoCompras/_GridViewPartial_catipocompras.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/CatalogoTipoCompras/_GridViewPartial_catipocompras.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_catipocompras";
-        settings.CallbackRouteValues = new { Controller = "CatalogoTipoCompras", Action = "GridViewPartial_catipocompras" };
+        settings.CallbackRouteValues = new { Controller = "CatalogoTipoCompras", Action = "GridViewPartial_catipocompras", Nuevo = ViewBag.Nuevo };
         settings.KeyFieldName = "IdCatalogocompra_tipo";
         settings.Width = Unit.Percentage(100);
         //Configuración para que la grilla no muestre texto completo
@@ -61,20 +61,18 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                {
-                    ViewContext.Writer.Write(
-                Html.ActionLink("Modificar", "Modificar", new { IdCatalogocompra_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogocompra_tipo") }) + "&nbsp;" +
-                        Html.ActionLink("Anular", "Anular", new { IdCatalogocompra_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogocompra_tipo") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
+                ViewContext.Writer.Write(
+                    Html.ActionLink("Consultar", "Consultar", new { IdCatalogocompra_tipo = DataBinder.Eval(tc.DataItem, "IdCatalogocompra_tipo") })
+                );
             });
             c.SetHeaderTemplateContent(tc =>
             {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
-                );
+                if (ViewBag.Nuevo == true)
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
+                    );
+                }
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
@@ -110,6 +108,7 @@
                 }
             });
         });
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
