--- a/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/Comprador/Consultar.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.Banco.ba_CatalogoTipo_Info
+﻿@model Core.Erp.Info.Compras.com_comprador_Info
 @{
-    ViewBag.Title = "Consultar tipo de catálogo de banco";
+    ViewBag.Title = "Consultar comprador";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,16 +8,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Consultar", "CatalogoTipoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-    @Html.HiddenFor(q => q.IdTipoCatalogo)
-    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
-    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
-    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
-    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
-    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
-    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
 
+@using (Html.BeginForm("Consultar", "Comprador", FormMethod.Post, new { @role = "form", @class = "form" }))
+{
+
+    @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdComprador)
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -37,10 +36,10 @@
     }
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-offset-10 col-md-1">
+            <div class="col-md-offset-9 col-md-1">
                 <div class="form-group">
                     <div id="btnNuevo" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","CatalogoTipoBanco",new { Area = "Banco" },null)">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","Comprador",new { Area = "Compras", IdEmpresa = Model.IdEmpresa },null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
@@ -49,8 +48,17 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnModificar" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "CatalogoTipoBanco", new { Area = "Banco" }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "Comprador", new { Area = "Compras", IdEmpresa = Model.IdEmpresa, IdComprador = Model.IdComprador }, null)">
                             <i class="fa fa-edit"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "Comprador", new { Area = "Compras", IdEmpresa = Model.IdEmpresa, IdComprador = Model.IdComprador }, null)">
+                            <i class="fa fa-remove"></i>
                         </a>
                     </div>
                 </div>
@@ -59,49 +67,46 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <div class="form-group">
-                    <label for="IdTipoCatalogo">Código*</label>
-                    @Html.TextBoxFor(q => q.IdTipoCatalogo, new { @class = "form-control", @readonly = "readonly" })
-                    @Html.ValidationMessageFor(m => m.IdTipoCatalogo, "", new { @class = "text-danger" })
+                    <label for="IdUsuario_com">Usuario</label>
+                    @Html.DropDownListFor(q => q.IdUsuario_com, new SelectList(ViewBag.lst_usuario, "IdUsuario", "Nombre"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdUsuario_com, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="Descripcion">Descripción*</label>
+                    @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Descripcion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="tc_Descripcion">Descripción*</label>
-                    @Html.TextBoxFor(q => q.tc_Descripcion, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.tc_Descripcion, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index","CatalogoTipoBanco",new { Area = "Banco" },null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index","Comprador", new { Area = "Compras"  },null)">Cancelar</a>
     </div>
-
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
 <script type="text/javascript">
     $(function () {
         MostrarBotonesAccion();
     });
 
     function MostrarBotonesAccion() {
-        if ($("#Nuevo").val() == 1) {
+        if ($("#Nuevo").val() == 1)
+        {
             $("#btnNuevo").show();
         }
-        if ($("#Modificar").val() == 1) {
+        if ($("#Modificar").val() == 1)
+        {
             $("#btnModificar").show();
         }
-        if ($("#Anular").val() == 1) {
+        if ($("#Anular").val() == 1)
+        {
             $("#btnAnular").show();
         }
     }
