--- a/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/DepartamentoCompras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Compras.com_departamento_Info
 @{
     ViewBag.Title = "Consultar departamentos de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,9 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_departamento")
+    @Html.Action("GridViewPartial_departamento", new { Nuevo = ViewBag.Nuevo })
 
 }
