--- a/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Consultar.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.Banco.ba_TipoFlujo_Plantilla_Info
+﻿@model Core.Erp.Info.Compras.com_estado_cierre_Info
 @{
-    ViewBag.Title = "Consultar plantilla de tipo de flujo";
+    ViewBag.Title = "Consultar estado de cierre de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
@@ -8,9 +8,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Consultar", "TipoFlujoPlantilla", FormMethod.Post, new { @class = "form", @role = "form" }))
+
+@using (Html.BeginForm("Consultar", "EstadoCierreCompras", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
-    if (ViewBag.mensaje != null)
+ @Html.HiddenFor(q=>q.IdEstado_cierre)
+@Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+@Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+@Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+
+    if (@ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
             <h4>
@@ -18,7 +24,6 @@
             </h4>
         </div>
     }
-
     if (ViewBag.MensajeSuccess != null)
     {
         <div class="alert alert-success alert-dismissible">
@@ -28,19 +33,12 @@
             </h4>
         </div>
     }
-
-    @Html.HiddenFor(q => q.IdEmpresa);
-    @Html.HiddenFor(q => q.IdPlantilla);
-    @Html.HiddenFor(q => q.IdTransaccionSession);
-    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
-    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
-    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-offset-9 col-md-1">
                 <div class="form-group">
                     <div id="btnNuevo" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "TipoFlujoPlantilla", new { Area = "Banco", IdEmpresa = Model.IdEmpresa }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo","EstadoCierreCompras",new { Area = "Compras" },null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
@@ -49,7 +47,7 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnModificar" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "TipoFlujoPlantilla", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdPlantilla = Model.IdPlantilla }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "EstadoCierreCompras", new { Area = "Compras", IdEstado_cierre = Model.IdEstado_cierre }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
@@ -58,7 +56,7 @@
             <div class="col-md-1">
                 <div class="form-group">
                     <div id="btnAnular" hidden>
-                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "TipoFlujoPlantilla", new { Area = "Banco", IdEmpresa = Model.IdEmpresa, IdPlantilla = Model.IdPlantilla }, null)">
+                        <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "EstadoCierreCompras", new { Area = "Compras", IdEstado_cierre = Model.IdEstado_cierre }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
@@ -66,6 +64,19 @@
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="IdEstado_cierre">Código*</label>
+                    @Html.TextBoxFor(q => q.IdEstado_cierre, new { @class = "form-control" ,@disabled="disabled"})
+                    @Html.ValidationMessageFor(q => q.IdEstado_cierre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -77,13 +88,12 @@
             </div>
         </div>
     </div>
-    <div class="modal-body">
-        @Html.Action("GridViewPartial_TipoFlujoPlantillaDet")
-    </div>
-    <div class="box-footer">
-        <a class="btn btn-default" href="@Url.Action("Index", "TipoFlujoPlantilla", new { Area ="Banco" }, null)">Cancelar</a>
-    </div>
 
+
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","EstadoCierreCompras", new { Area = "Compras"  },null)">Cancelar</a>
+    </div>
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
@@ -109,5 +119,3 @@
         }
     }
 </script>
-
-
