--- a/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/EstadoCierreCompras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model Core.Erp.Info.Compras.com_estado_cierre_Info
 @{
     ViewBag.Title = "Consultar estados de cierre de compra";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
@@ -10,7 +10,8 @@
 
 @using (Html.BeginForm())
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
-    @Html.Action("GridViewPartial_estadocierre")
+    @Html.Action("GridViewPartial_estadocierre", new { Nuevo = ViewBag.Nuevo })
 
 }
