--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Anular.cshtml
@@ -187,6 +187,17 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
+                <div class="form-group has-error">
+                    <label for="MotiAnula">Motivo anulación*</label>
+                    @Html.TextAreaFor(q => q.MotivoAnulacion, new { @class = "form-control", @rows = 3 })
+                    @Html.ValidationMessageFor(q => q.MotivoAnulacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
                 <div class="form-group">
                     @Html.Action("GridViewPartial_orden_servicio_det")
                 </div>
